--- a/routing/components/POI/poi.html
+++ b/routing/components/POI/poi.html
@@ -5,7 +5,7 @@
                 <td>
                         <span ng-bind="poi.name"></span>
                 <br> 
-                <a href=""><img ng-style="{'height': '100px','width': '170px', 'border-radius': '10px'}" ng-src="../../tokens{{poi.poi_img}}"></a>
+                <a href="#single"><img ng-style="{'height': '100px','width': '170px', 'border-radius': '10px'}" ng-src="../../tokens{{poi.poi_img}}"></a>
                         
                 <br>
 
