--- a/routing/components/Register/register.html
+++ b/routing/components/Register/register.html
@@ -78,7 +78,7 @@
         <br />
         <div ng-show="form.$submitted || form.categories[0].$touched">
         <div ng-show="form.categories[0].$error.required">Please enter your first category.</div>
-        </div><br>
+        </div>
         Second Category:
         <select ng-model="rgCtrl.user.categories[1]" name="categories[1]" required>
                 <option value="" disabled selected>Select your category</option>
@@ -86,7 +86,7 @@
                 <option value="Night Life">Night Life</option>
                 <option value="Historic Sites">Historic sites</option>
                 <option value="Attractions">Attractions</option>
-        </select><br/>
+        </select>
         <div ng-show="form.$submitted || form.categories[1].$touched">
         <div ng-show="form.categories[1].$error.required">Please enter your second category.</div>
         </div><br>
@@ -107,7 +107,7 @@
         <label>Second answer:
         <input type="text" ng-model="rgCtrl.user.answersForRecovery[1]" name="answersForRecovery[1]" required="" />
         </label>
-        <br />
+        <br>
         <div ng-show="form.$submitted || form.answersForRecovery[1].$touched">
         <div ng-show="form.answersForRecovery[1].$error.required">Please enter your answer to the first question.</div>
         </div>
