--- a/routing/components/Register/register.html
+++ b/routing/components/Register/register.html
@@ -50,12 +50,15 @@
         </div>
 
         <label>Country:
-        <input type="text" ng-model="rgCtrl.user.country" name="country" required="" />
+        <select ng-model="rgCtrl.user.country" name="country" required>
+                <option value="" disabled selected>Select your country</option>
+                <option ng-repeat="country in rgCtrl.countries" value="{{country}}">{{country}}</option>
+        </select>
         </label>
         <br />
         <div ng-show="form.$submitted || form.country.$touched">
         <div ng-show="form.country.$error.required">Please enter your country.</div>
-        </div>
+        </div><br>
 
         <label>E-mail:
         <input type="email" ng-model="rgCtrl.user.email" name="email" required="" />
@@ -69,10 +72,7 @@
         <label>First Category:
         <select ng-model="rgCtrl.user.categories[0]" name="categories[0]" required>
             <option value="" disabled selected>Select your category</option>
-            <option value="Food">Food</option>
-            <option value="Night Life">Night Life</option>
-            <option value="Historic Sites">Historic sites</option>
-            <option value="Attractions">Attractions</option>
+            <option ng-repeat="category in rgCtrl.categories" value="{{category.CategoryName}}">{{category.CategoryName}}</option>
         </select>
         </label>
         <br />
@@ -82,10 +82,7 @@
         Second Category:
         <select ng-model="rgCtrl.user.categories[1]" name="categories[1]" required>
                 <option value="" disabled selected>Select your category</option>
-                <option value="Food">Food</option>
-                <option value="Night Life">Night Life</option>
-                <option value="Historic Sites">Historic sites</option>
-                <option value="Attractions">Attractions</option>
+                <option ng-repeat="category in rgCtrl.categories" value="{{category.CategoryName}}">{{category.CategoryName}}</option>
         </select>
         <div ng-show="form.$submitted || form.categories[1].$touched">
         <div ng-show="form.categories[1].$error.required">Please enter your second category.</div>
