--- a/routing/components/Register/register.html
+++ b/routing/components/Register/register.html
@@ -1,4 +1,5 @@
 <h1>Please fill all the fields in order to register</h1>
+<img ng-src="https://cf.ltkcdn.net/cheerleading/images/orig/208322-1600x1066-Cartoon-Cheerleaders.jpg" style="width:200px;height:200px;">
 <div>
     <form name="form" novalidate>
         <label>User Name:
