--- a/routing/components/About/about.html
+++ b/routing/components/About/about.html
@@ -1,10 +1,2 @@
-<h1> Hi </h1>
-<h2>This is the about page</h2>
-
-<div>
-    <p>Click the button to run a function:</p>
-    <button ng-click="myFunc()">OK</button>
-    <p>The button has been clicked {{count}} times.</p>
-    
-
-</div>
+<h1 style="margin-left: 32%">Come to Casablanca! </h1>
+<img ng-src="Shivuk.jpg" width="350" height="300" style="margin-left: 30%">
