--- a/routing/components/Guest/guest.html
+++ b/routing/components/Guest/guest.html
@@ -1,1 +1,32 @@
-Hello <span ng-bind="userName"></span>!
+Hello guest!
+<br>
+<br>
+<div id="random_pois">
+        <table>
+                <tr ng-repeat="(id, poi) in gstCtrl.rand_pois" >
+                        <td>
+                            <a href="#/singlePOI"> <span ng-bind="poi.name"></span></a>
+                        <br> 
+                        Point rank: <span ng-bind="poi.poi_rank"></span>
+                        <br>
+                        <span ng-bind="poi.num_of_views"></span> People have viewed this point!
+                        <br>
+                        <span ng-bind="poi.poi_description"></span>
+                        <a href="#/singlePOI"><img ng-style="{'height': '100px','width': '150px', 'border-radius': '10px'}" ng-src="../../tokens{{poi.poi_img}}"></a>
+                        <br>
+                        Point reviews:
+                        <br>
+                        Review 1: <span ng-bind="poi.poi_review1"></span>
+                        <br>
+                        Review 2: <span ng-bind="poi.poi_review2"></span>
+                        <br>
+                        </td>
+                        <td>
+                                <!-- with radio button we would like one data model for each option -->
+                                <input type="radio"  value="{{poi.name}}" ng-model="gstCtrl.selected" ng-change="gstCtrl.setCurrentPOI({{poi.name}})">
+                        </td>
+                </tr>
+                        
+                
+        </table>
+    </div>
