--- a/routing/components/About/about.html
+++ b/routing/components/About/about.html
@@ -1,2 +1,2 @@
 <h1 style="margin-left: 32%">Come to Casablanca! </h1>
-<img ng-src="Shivuk.jpg" width="350" height="300" style="margin-left: 30%">
+<img id="shivuk_img" ng-src="Shivuk.jpg"/>
