--- a/routing/style.css
+++ b/routing/style.css
@@ -1,3 +1,6 @@
+body{
+	background-image: url("background.jpg");
+}
 #topnav
 {
 	z-index: 999;
@@ -29,4 +32,15 @@
 }
 #topnav li a:hover{
 	background-color: rgba(200,80,255,0.6);
+}
+
+#shivuk_img{
+    margin-left: 30%;
+    width: 400px;
+    height: 400px;
+
+}
+#pois_table{
+	top:100px;
+	position: absolute;
 }
