--- a/routing/components/Guest/guest.html
+++ b/routing/components/Guest/guest.html
@@ -1,6 +1,8 @@
 Hello guest!
 <br>
 <br>
+<img src="cheers.jpg" style="margin-left: 30%; width:300px; height:200px;">
+
 <div id="random_pois">
         <table>
                 <tr ng-repeat="(id, poi) in gstCtrl.rand_pois" >
