--- a/routing/components/Register/register.html
+++ b/routing/components/Register/register.html
@@ -1,6 +1,6 @@
-<h1>Please fill all the fields in order to register</h1>
+<h1 style="margin-left: 30%">Please fill all the fields in order to register</h1>
 <div>
-    <form name="form" novalidate>
+    <form style="margin-left: 30%" name="form" novalidate>
         <label>User Name:
         <input type="text" ng-model="rgCtrl.user.userName" name="userName" required="" />
         </label>
