--- a/routing/resources/style.css
+++ b/routing/resources/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url("background.jpg");
+	background-image: url("img/background.png");
 }
 #topnav
 {
@@ -13,13 +13,13 @@ body{
 	overflow: hidden;
 	list-style-type: none;
     margin: auto;
-	width:950px;
+	width:60%;
     background-color: rgba(200,180,240,0.8);
     border-radius: 12px;
 }
 #topnav li{
 	float: left;
-	width:14.2857142857%;
+	width:20%;
 	font-weight:bold;
 }
 #topnav li a{
