--- a/routing/components/Guest/guest.html
+++ b/routing/components/Guest/guest.html
@@ -1,28 +1,29 @@
 Hello guest!
 <br>
 <br>
-<img src="cheers.jpg" style="margin-left: 30%; width:300px; height:200px;">
+<img src="../../routing/resources/img/cheers.jpg" style="margin-left: 30%; width:300px; height:200px;">
 
 <div id="random_pois">
-        <table>
-                <tr ng-repeat="(id, poi) in gstCtrl.rand_pois" >
-                        <td>
-                            <a href="#/singlePOI"> <span ng-bind="poi.name"></span></a>
-                        <br> 
-                        Point rank: <span ng-bind="poi.poi_rank"></span>
-                        <br>
-                        <span ng-bind="poi.num_of_views"></span> People have viewed this point!
-                        <br>
-                        <span ng-bind="poi.poi_description"></span>
-                        <a href="#/singlePOI"><img ng-style="{'height': '100px','width': '150px', 'border-radius': '10px'}" ng-src="../../tokens{{poi.poi_img}}"></a>
-                        <br>
-                        Point reviews:
-                        <br>
-                        Review 1: <span ng-bind="poi.poi_review1"></span>
-                        <br>
-                        Review 2: <span ng-bind="poi.poi_review2"></span>
-                        <br>
-                        </td>
+        <table id="guest_table">
+                <tr>
+                        <td ng-repeat="(id, poi) in gstCtrl.rand_pois">
+                                <a href="#/singlePOI"> <span ng-bind="poi.name"></span></a>
+                                <br> 
+                                <a href="#/singlePOI"><img ng-style="{'height': '100px','width': '150px', 'border-radius': '10px'}" ng-src="../../tokens{{poi.poi_img}}"></a>
+                                <br>
+                                Point rank: <span ng-bind="poi.poi_rank"></span>
+                                <br>
+                                <span ng-bind="poi.num_of_views"></span> People have viewed this point!
+                                <br>
+                                <span ng-bind="poi.poi_description"></span>
+                                <br>
+                                Point reviews:
+                                <br>
+                                Review 1: <span ng-bind="poi.poi_review1"></span>
+                                <br>
+                                Review 2: <span ng-bind="poi.poi_review2"></span>
+                                <br>
+                                </td>
                         <td>
                                 <!-- with radio button we would like one data model for each option -->
                                 <input type="radio"  value="{{poi.name}}" ng-model="gstCtrl.selected" ng-change="gstCtrl.setCurrentPOI({{poi.name}})">
