--- a/routing/components/Register/register.html
+++ b/routing/components/Register/register.html
@@ -112,6 +112,6 @@
  </div>
 
  <br>
-<button ng-click="rgCtrl.register()" ng-disabled="!form.$valid">Register</button>
+<button style="margin-left: 30%" ng-click="rgCtrl.register()" ng-disabled="!form.$valid">Register</button>
 <span ng-bind="rgCtrl.register.content"></span>
 <br>
