--- a/routing/components/RegisteredUsers/ru.html
+++ b/routing/components/RegisteredUsers/ru.html
@@ -34,7 +34,7 @@ Hello <span ng-bind="ruCtrl.userName.content"></span>!
     
 </table>
 <br>
-2 most recent points of interest saved by <span ng-bind="ruCtrl.userName.content"></span>:
+2 most recent points of interest saved by <span ng-bind="ruCtrl.userName.content"></span>'s favourite categories:
 
 <!--
 <table id="ru_recent_table">
