--- a/routing/components/RegisteredUsers/ru.html
+++ b/routing/components/RegisteredUsers/ru.html
@@ -1,7 +1,7 @@
 Hello <span ng-bind="ruCtrl.userName.content"></span>
 
 
-<table id="ru_fav_table">
+<table style="margin-left: 30%" id="ru_fav_table">
     <tr>
             <td ng-repeat="(id, poi) in ruCtrl.fav_pois">
                 <a href="#/singlePOI"> <span ng-bind="poi.name"></span></a>
