--- a/routing/components/Guest/guest.html
+++ b/routing/components/Guest/guest.html
@@ -1,5 +1,7 @@
 Hello guest!
 <br>
+<button ng-click="gstCtrl.login()">Login</button>
+<br>
 <br>
 <img src="../../routing/resources/img/cheers.jpg" style="margin-left: 30%; width:300px; height:200px;">
 
