--- a/routing/components/RegisteredUsers/ru.html
+++ b/routing/components/RegisteredUsers/ru.html
@@ -1,5 +1,7 @@
 Hello <span ng-bind="ruCtrl.userName.content"></span>!
 <br>
+<button ng-click="ruCtrl.logout()">Logout</button>
+<br>
 <p style="margin-left: 30%"> 2 most popular points of interest from <span ng-bind="ruCtrl.userName.content"></span>'s favourite categories: </p>
 <table style="margin-left: 30%" id="ru_fav_table">
     <tr>
