--- a/routing/components/Register/register.html
+++ b/routing/components/Register/register.html
@@ -70,7 +70,7 @@
         </div>
         <br>
 
-        Categories:
+        Categories (At least two):
         <br>
         <label ng-repeat="category in rgCtrl.categories">
         <input type="checkbox" ng-model="rgCtrl.categories[$index].checked">
