--- a/routing/components/RegisteredUsers/ru.html
+++ b/routing/components/RegisteredUsers/ru.html
@@ -1,4 +1,4 @@
-Hello <span ng-bind="ruCtrl.userName.content"></span>!
+Hello <span ng-bind="ruCtrl.userName"></span>!
 <br>
 <button ng-click="ruCtrl.logout()">Logout</button>
 <br>
